fix nav bar overflow

--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -2,7 +2,6 @@
     position: absolute;
     top: 0;
     color: white;
-    width: 100%;
     padding: 1em;
 }
 
